--- a/summa.html
+++ b/summa.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tea House</title>
+    <title>Midu tea House</title>
     <!-- tailwind and daisy UI -->
     <link href="https://cdn.jsdelivr.net/npm/daisyui@3.3.1/dist/full.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
@@ -40,10 +40,10 @@
             <div class="flex justify-between items-center flex-col lg:flex-row">
                 <div>
                     <h1 class="text-7xl font-extrabold">
-                        It's good <br>
-                        tea time at The <br>
-                        Tea House</h1>
-                    <p class="py-6">Tea and Botanical Solutions Supplier Give Optimum Satisfaction To Your Taste Buds.
+                        TRY OUR <br>
+                        tea  <br>
+                        IN PATKHET</h1>
+                    <p class="py-6">IT IS good for your body
                     </p>
                     <button class="btn bg-gradient-to-r from-gradient-start to-gradient-end text-white">
                         Explore More
