--- a/summa.html
+++ b/summa.html
@@ -40,9 +40,9 @@
             <div class="flex justify-between items-center flex-col lg:flex-row">
                 <div>
                     <h1 class="text-7xl font-extrabold">
-                        TRY OUR <br>
+                        MIDU <br>
                         tea  <br>
-                        IN PATKHET</h1>
+                        HOUSE</h1>
                     <p class="py-6">IT IS good for your body
                     </p>
                     <button class="btn bg-gradient-to-r from-gradient-start to-gradient-end text-white">
@@ -77,7 +77,7 @@
                 <div class="card p-8 bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4] shadow-xl">
                     <figure><img src="/images/tea-1.png" alt="Shoes" /></figure>
                     <div class="card-body justify-center">
-                        <h2 class="text-2xl font-bold">Milk Tea</h2>
+                        <h2 class="text-2xl font-bold">NIMBU Tea</h2>
                         <p>Creamer could be replaced by fresh milk</p>
                     </div>
                 </div>
@@ -85,7 +85,7 @@
                 <div class="card p-8 bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4] shadow-xl">
                     <figure><img src="/images/tea-2.png" alt="Shoes" /></figure>
                     <div class="card-body justify-center">
-                        <h2 class="text-2xl font-bold">Milk Tea</h2>
+                        <h2 class="text-2xl font-bold">VANI Tea</h2>
                         <p>Creamer could be replaced by fresh milk</p>
                     </div>
                 </div>
@@ -93,7 +93,7 @@
                 <div class="card p-8 bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4] shadow-xl">
                     <figure><img src="/images/tea-3.png" alt="Shoes" /></figure>
                     <div class="card-body justify-center">
-                        <h2 class="text-2xl font-bold">Milk Tea</h2>
+                        <h2 class="text-2xl font-bold">BUBBE Tea</h2>
                         <p>Creamer could be replaced by fresh milk</p>
                     </div>
                 </div>
@@ -101,7 +101,7 @@
                 <div class="card p-8 bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4] shadow-xl">
                     <figure><img src="/images/tea-4.png" alt="Shoes" /></figure>
                     <div class="card-body justify-center">
-                        <h2 class="text-2xl font-bold">Milk Tea</h2>
+                        <h2 class="text-2xl font-bold">ICE Tea</h2>
                         <p>Creamer could be replaced by fresh milk</p>
                     </div>
                 </div>
